# nexus-sandbox

./: .env.example  .gitignore  .pre-commit-config.yaml  .replit  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  docker-compose.lite.yml  docker-compose.yml  docs.nexusglobalpayments.org_documentation.md  e2e_verify_direct.py  e2e_verify_live.py  live_e2e_runner.py  nexus_documentation_analysis.md  replit-start.sh  replit.md  replit.nix  start.sh
.audit/: 00_EXECUTIVE_SUMMARY.md  01_official_docs_analysis.md  04_frontend_parity.md  05_database_seed_analysis.md  06_api_parity_check.md  07_payment_flow_parity_check.md  08_iso_message_parity_check.md  09_fee_parity_check.md  10_actor_parity_check.md  11_frontend_backend_parity_check.md  12_github_demo_experience_audit.md  13_documentation_freshness_audit.md  14_seed_data_completeness_audit.md  15_docker_setup_usability_audit.md  AUDIT_SUMMARY.md  COMPLETE_AUDIT_SUMMARY.md  COMPREHENSIVE_PARITY_AUDIT_REPORT.md  FINAL_AUDIT_REPORT.md  FINAL_COMPREHENSIVE_AUDIT_REPORT.md  IMPLEMENTATION_SUMMARY.md  ISSUES_AND_ACTION_PLAN.md  PAYMENT_FLOW_PARITY_ANALYSIS.md  gaps-found.md  (+1 more)
services/nexus-gateway/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/nexus-gateway/src/: __init__.py  config.py  db.py  main.py  observability.py
services/nexus-gateway/src/api/: actors.py  address_types.py  addressing.py  callbacks.py  countries.py  currencies.py  demo_data.py  fee_config.py  fee_formulas.py  fees.py  fin_insts.py  fxp.py  health.py  intermediary_agents.py  ips.py  iso20022.py  liquidity.py  pacs002.py  payments_explorer.py  pdo.py  psp.py  qr.py  quotes.py  rates.py  reconciliation.py  relationships.py  returns.py  sanctions.py  sap.py  schemas.py  validation.py
services/nexus-gateway/src/api/iso20022/: __init__.py  acmt023.py  acmt024.py  builders.py  camt103.py  constants.py  pacs002.py  pacs004.py  pacs008.py  recall_handlers.py
services/nexus-gateway/src/middleware/: __init__.py  rate_limiter.py
services/nexus-gateway/src/models/: __init__.py  models.py
services/nexus-gateway/tests/: conftest.py  test_fees.py  test_health.py  test_iso20022.py
(+123 files in other folders)
